# c2c-plugin-porter

./: .gitignore  AGENTS.md  README.md
.agents/plugins/: marketplace.json
.githooks/: pre-commit  pre-push
.github/workflows/: pull-request.yml
docs/: mapping-notes.md
evals/prompts/: smoke-eval.txt
plugins/c2c-plugin-porter/: AGENTS.md  README.md  pyproject.toml
plugins/c2c-plugin-porter/.codex-plugin/: plugin.json
plugins/c2c-plugin-porter/evals/prompts/: smoke-eval.txt
plugins/c2c-plugin-porter/evals/tmp/: scan.json
plugins/c2c-plugin-porter/scripts/: check.sh  install_git_hooks.sh  run_local_eval.sh  run_porter.sh
plugins/c2c-plugin-porter/skills/assess-claude-portability/: SKILL.md
plugins/c2c-plugin-porter/skills/port-claude-plugin/: SKILL.md
plugins/c2c-plugin-porter/skills/resolve-claude-references/: SKILL.md
plugins/c2c-plugin-porter/src/c2c_porter/: cli.py  porter.py
plugins/c2c-plugin-porter/tests/fixtures/sample-claude-plugin/: README.md
plugins/c2c-plugin-porter/tests/fixtures/sample-claude-plugin/agents/: reviewer.md
plugins/c2c-plugin-porter/tests/fixtures/sample-claude-plugin/skills/review-checklist/: SKILL.md
scripts/: check.sh  install_git_hooks.sh  run_local_eval.sh
skills/assess-claude-portability/: SKILL.md
skills/port-claude-plugin/: SKILL.md
src/c2c_porter/: __init__.py
tests/: test_porter.py
tests/fixtures/sample-claude-plugin/.claude-plugin/: plugin.json
tests/fixtures/sample-claude-plugin/commands/: full-review.md
