[project]
name = "c2c-plugin-porter"
version = "0.1.0"
description = "Codex plugin and utility for porting Claude plugins into Codex plugins."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.16.0",
]

[project.scripts]
c2c-porter = "c2c_porter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/c2c_porter"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.sdist]
include = [
  "src/c2c_porter",
  ".codex-plugin",
  "skills",
  "tests",
  "docs",
  "scripts",
  "evals",
  "README.md",
  "AGENTS.md",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff==0.15.9",
  "ty==0.0.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
